update color code

--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ header .navbar.animate {
 
 #hero h2 {
     font-size: clamp(40px, 8vw, 80px);
-    color: var(--primary-color) !important;
+    color: #B2AC88; !important;
 }
 
 #hero h3 {
